fix logo align

--- a/imagemap/static_files/ghosttown/css/main.css
+++ b/imagemap/static_files/ghosttown/css/main.css
@@ -26,7 +26,7 @@ body {
 
 
 #home-logo{
-    top: 40px;
+    top: 20px;
     z-index: 1;
     position: absolute;
 }
